Files for seman pt 2